@@ -2,13 +2,13 @@
 Hash: SHA256
 
 DIST rssdler-0.4.2.tar.gz 36612 RMD160 f85f61951da1ad81338683150c83d895c3d11c45 SHA1 d8ca6582ac8a84435a04d5e194a51382e2bf5692 SHA256 96e1fefd1a6a3325aee1778fcf5ca115dcfb924047024f70e1ddd869017829ce
-EBUILD rssdler-0.4.2.ebuild 541 RMD160 1ae076a23fe21c434a8835b4f6013c5d7d74cfdf SHA1 6f722ea97fa5e3dc4201928d033ce7aae61fb2f9 SHA256 590615bb3b03d863bef06b0922139eb172e3a2ab6bccb38954828a43a758f6aa
-MISC ChangeLog 253 RMD160 2f6bc3fb21918395be35ecebe5a9f7f18f38444a SHA1 394cd39206cc5325db026931ccfc976cad4d5cd1 SHA256 16f8fc6f28fac9e9fd0fcb441d2bd6e1df8235ab8b6ad0c1e55d092cd46f6019
+EBUILD rssdler-0.4.2.ebuild 801 RMD160 3e6d0f4e6eba3582efb39f191e3e37fb5698f277 SHA1 566b7648cff8c35ed1a66c6af0da7efdb3a630f1 SHA256 7672caa683923a784c6e6c896fa4a3abded1bfc3d9ac7470a2f6b08e35304492
+MISC ChangeLog 355 RMD160 1d9ad6e3fabbe863e30b7093f1effe0cf9b1128d SHA1 98eae50224e6a1bac7b51db3918a68bc3d2adc46 SHA256 c7f8f38d86735e1006da9f01bde99307c20115885aad22e10a938af305bd0c66
 MISC metadata.xml 245 RMD160 6b03982a4d5f32d9fa6b9259ae36f9fcb07c8404 SHA1 fb16c7b4c5ab071dd979f761b8bb075f5396b737 SHA256 375a1da02cd2c393ce2378a73c1ce08134bc030b3bb378c6a4d6ca9cd5be1f8d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk4965IACgkQknrdDGLu8JB91wD/QqIz4UoWraSP3UtIWqAxopXn
-wHsiZi70/8sMPEvBHc0BAIdrCRaNcytDVwn0PR1U3/nPOzFUMhiVbN3Mp9d/Wi4i
-=510R
+iF4EAREIAAYFAk49/BgACgkQknrdDGLu8JAbgwD8DO3Z6DVYcdgaOQgKMeoNN4vv
+7fv0XnQGzAowZbIZuKEA/3Ru7EtmXdfmzig/Mxrq5xtXRmu8Syd1IzG/VZmuyEHm
+=EJjT
 -----END PGP SIGNATURE-----
